--- a/greeting.html
+++ b/greeting.html
@@ -1,48 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>My First React app</title>
+    <title>Welcome to Bloc</title>
   </head>
   <body>
 
     <div id="app"></div>
-    <div id="top"></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.1.0/umd/react.development.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.1.0/umd/react-dom.development.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
 
     <script type="text/babel">
-       class Greeting extends React.Component {
-         render() {
-           return (
-             <div>
-               <h1>Hello {this.props.name}!</h1>
-             </div>
-           );
-         }
-       }
 
-       ReactDOM.render(
-         <Greeting name = "Jordan" />, document.getElementById('app')
-       );
-       </script>
+    class Counter extends React.Component {
 
-       <script type="text/babel">
-          class Goodbye extends React.Component {
-            render() {
-              return (
-                <div>
-                  <h1>Goodbye World!</h1>
-                </div>
-              );
-            }
-          }
+      constructor(props){
+        super(props);
+        this.state = {
+          number: 1
+        }
+      }
 
-          ReactDOM.render(
-            <Goodbye />, document.getElementById('top')
-          );
-       </script>
+      increment(event) {
+          this.setState({
+            number: this.state.number + 1
+          })
+        }
 
+        decrement(event) {
+          this.setState({
+            number: Math.max(1, this.state.number - 1)
+          })
+        }
+
+
+
+      render() {
+        return (
+          <div>
+            <img src={this.props.image} alt="Bloc Logo"/>
+            <h2>Current program: {this.props.label}</h2>
+            <h3>Current week: {this.state.number}</h3>
+             <button onClick={this.increment.bind(this)}>Increment</button>
+             <button onClick={this.decrement.bind(this)}>Decrement</button>
+            <p>Current date: {this.props.date.toLocaleDateString()}</p>
+          </div>
+        );
+      }
+    }
+
+      const info = {
+        date: new Date(),
+        image: 'https://avatars0.githubusercontent.com/u/1441485?v=4&s=280',
+      }
+
+      Counter.defaultProps = {
+        label: "Web Developer Track"
+      }
+
+      ReactDOM.render(
+        <Counter
+          date={info.date}
+          image={info.image}/>,document.getElementById('app')
+      );
+
+    </script>
   </body>
 </html>
